# gamedev

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  dev.bat  jsconfig.json  justfile  start.bat
.claude/: settings.json
.claude/agents/: game-engine-architect.md  gameplay-programmer.md
plans/: arkanoid-gdd.md  engine-generalization-plan.md  engine-scheduled-systems-integrate-velocity.md
src/: engine.rs  lib.rs  wasm_api.rs
src/engine/: mod.rs  systems.rs  tests.rs
src/engine/ecs/: components.rs  entity.rs  mod.rs  query.rs  resources.rs  schedule.rs  systems.rs  world.rs
src/engine/games/: mod.rs  registry.rs
src/engine/games/arkanoid/: mod.rs
src/engine/games/pong/: mod.rs  resources.rs  tests.rs
src/games/: mod.rs  registry.rs
src/games/arkanoid/: mod.rs
src/games/pong/: mod.rs  tests.rs
web/: app.js  index.html  input.js  styles.css
web/arkanoid/: TuningControls.js  TuningPanel.js  app.js  index.html
web/games/arkanoid/: app.js  index.html
web/games/pong/: TuningControls.js  app.js  index.html
web/pong/: TuningControls.js  TuningPanel.js  app.js  index.html
web/shared/: TuningApp.js  TuningPanel.js  styles.css
