[package]
name = "gamedev-wasm-hello"
version = "0.1.0"
edition = "2021"
description = "Rust + WebAssembly Pong-style simulation"
repository = "https://github.com/cwick/gamedev"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
